# bear-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bear.rs  cli.rs  config.rs  dates.rs  db.rs  export.rs  lib.rs  main.rs  mcp.rs  model.rs  notify.rs  output.rs  prefs.rs  runner.rs  search.rs  store.rs  verbose.rs
src/cloudkit/: auth.rs  auth_server.rs  client.rs  mod.rs  models.rs  vector_clock.rs
