[package]
name = "bear-cli"
version = "0.3.3"
description = "A native Rust CLI for Bear.app on macOS — SQLite for reads, CloudKit REST API for writes"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/bear-cli"
repository = "https://github.com/BIRSAx2/bear-cli"
homepage = "https://github.com/BIRSAx2/bear-cli"
keywords = ["bear", "notes", "cli", "macos"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
default-run = "bear"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1.0", features = ["v4"] }
plist = "1.7"
tiny_http = "0.12"

[[bin]]
name = "bear"
path = "src/main.rs"
